update: フォントと音声の読み込み終了を検知する

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/icon-32x32.png">
     <link rel="manifest" href="manifest.json">
     <!-- preload fonts -->
-    <link rel="preload" href="fonts/ABACUS2.woff" as="font" crossorigin>
-    <link rel="preload" href="fonts/KosugiMaru-Regular.ttf" as="font" crossorigin>
+    <link id="preload-font--abacus" rel="preload" href="fonts/ABACUS2.woff" as="font" crossorigin
+          data-loaded="0" onload="this.dataset.loaded = '1';">
+    <link id="preload-font--kosugimaru" rel="preload" href="fonts/KosugiMaru-Regular.ttf" as="font" crossorigin
+          data-loaded="0" onload="this.dataset.loaded = '1';">
     <!-- service worker -->
     <script type="module" src="js/delete_sw.ts"></script>
 </head>
