update: フラッシュの桁数・口数を select 要素に変更

--- a/src/index.html
+++ b/src/index.html
@@ -162,8 +162,7 @@
                     <div class="col-sm-auto">
                         <label for="addition-digit" class="text-light">桁数</label>
                         <div class="input-group">
-                            <input type="text" inputmode="decimal" id="addition-digit" class="form-control text-end"
-                                   autocomplete="off">
+                            <select id="addition-digit" class="form-select"></select>
                             <div class="input-group-append">
                                 <span class="input-group-text">桁</span>
                             </div>
@@ -172,8 +171,7 @@
                     <div class="col-sm-auto">
                         <label for="addition-length" class="text-light">口数</label>
                         <div class="input-group">
-                            <input type="text" inputmode="decimal" id="addition-length" class="form-control text-end"
-                                   autocomplete="off">
+                            <select id="addition-length" class="form-select"></select>
                             <div class="input-group-append">
                                 <span class="input-group-text">口</span>
                             </div>
@@ -197,13 +195,11 @@
                     <div class="col-sm-auto">
                         <label for="multiplication-digit-1" class="text-light">桁数</label>
                         <div class="input-group">
-                            <input type="text" inputmode="decimal" id="multiplication-digit-1"
-                                   class="form-control text-end" autocomplete="off">
+                            <select id="multiplication-digit-1" class="form-select"></select>
                             <span class="input-group-text">桁</span>
                             <span class="input-group-text">×</span>
                             <label for="multiplication-digit-2"></label>
-                            <input type="text" inputmode="decimal" id="multiplication-digit-2"
-                                   class="form-control text-end" autocomplete="off">
+                            <select id="multiplication-digit-2" class="form-select"></select>
                             <div class="input-group-append">
                                 <span class="input-group-text">桁</span>
                             </div>
@@ -212,8 +208,7 @@
                     <div class="col-sm-auto">
                         <label for="multiplication-length" class="text-light">口数</label>
                         <div class="input-group">
-                            <input type="text" inputmode="decimal" id="multiplication-length"
-                                   class="form-control text-end" autocomplete="off">
+                            <select id="multiplication-length" class="form-select"></select>
                             <div class="input-group-append">
                                 <span class="input-group-text">口</span>
                             </div>
