update: フラッシュの桁数・口数・秒数のインプットボックスを拡大

--- a/src/index.html
+++ b/src/index.html
@@ -161,30 +161,24 @@
                 <div class="row row-cols-sm-auto mb-2">
                     <div class="col-sm-auto">
                         <label for="addition-digit" class="text-light">桁数</label>
-                        <div class="input-group">
+                        <div class="input-group input-group-lg">
                             <select id="addition-digit" class="form-select"></select>
-                            <div class="input-group-append">
-                                <span class="input-group-text">桁</span>
-                            </div>
+                            <span class="input-group-text">桁</span>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <label for="addition-length" class="text-light">口数</label>
-                        <div class="input-group">
+                        <div class="input-group input-group-lg">
                             <select id="addition-length" class="form-select"></select>
-                            <div class="input-group-append">
-                                <span class="input-group-text">口</span>
-                            </div>
+                            <span class="input-group-text">口</span>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <label for="addition-time" class="text-light">秒数</label>
-                        <div class="input-group col">
+                        <div class="input-group input-group-lg">
                             <input type="text" inputmode="numeric" id="addition-time" class="form-control text-end"
                                    autocomplete="off">
-                            <div class="input-group-append">
-                                <span class="input-group-text">秒</span>
-                            </div>
+                            <span class="input-group-text">秒</span>
                         </div>
                     </div>
                 </div>
@@ -194,34 +188,28 @@
                 <div class="row row-cols-sm-auto mb-2">
                     <div class="col-sm-auto">
                         <label for="multiplication-digit-1" class="text-light">桁数</label>
-                        <div class="input-group">
+                        <div class="input-group input-group-lg">
                             <select id="multiplication-digit-1" class="form-select"></select>
                             <span class="input-group-text">桁</span>
                             <span class="input-group-text">×</span>
                             <label for="multiplication-digit-2"></label>
                             <select id="multiplication-digit-2" class="form-select"></select>
-                            <div class="input-group-append">
-                                <span class="input-group-text">桁</span>
-                            </div>
+                            <span class="input-group-text">桁</span>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <label for="multiplication-length" class="text-light">口数</label>
-                        <div class="input-group">
+                        <div class="input-group input-group-lg">
                             <select id="multiplication-length" class="form-select"></select>
-                            <div class="input-group-append">
-                                <span class="input-group-text">口</span>
-                            </div>
+                            <span class="input-group-text">口</span>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <label for="multiplication-time" class="text-light">秒数</label>
-                        <div class="input-group">
+                        <div class="input-group input-group-lg">
                             <input type="text" inputmode="numeric" id="multiplication-time"
                                    class="form-control text-end" autocomplete="off">
-                            <div class="input-group-append">
-                                <span class="input-group-text">秒</span>
-                            </div>
+                            <span class="input-group-text">秒</span>
                         </div>
                     </div>
                 </div>
