update: フラッシュの桁数・口数・秒数のインプットボックスを右揃えにする

--- a/src/index.html
+++ b/src/index.html
@@ -162,14 +162,14 @@
                     <div class="col-sm-auto">
                         <label for="addition-digit" class="text-light">桁数</label>
                         <div class="input-group input-group-lg">
-                            <select id="addition-digit" class="form-select"></select>
+                            <select id="addition-digit" class="form-select text-end"></select>
                             <span class="input-group-text">桁</span>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <label for="addition-length" class="text-light">口数</label>
                         <div class="input-group input-group-lg">
-                            <select id="addition-length" class="form-select"></select>
+                            <select id="addition-length" class="form-select text-end"></select>
                             <span class="input-group-text">口</span>
                         </div>
                     </div>
@@ -189,18 +189,18 @@
                     <div class="col-sm-auto">
                         <label for="multiplication-digit-1" class="text-light">桁数</label>
                         <div class="input-group input-group-lg">
-                            <select id="multiplication-digit-1" class="form-select"></select>
+                            <select id="multiplication-digit-1" class="form-select text-end"></select>
                             <span class="input-group-text">桁</span>
                             <span class="input-group-text">×</span>
                             <label for="multiplication-digit-2"></label>
-                            <select id="multiplication-digit-2" class="form-select"></select>
+                            <select id="multiplication-digit-2" class="form-select text-end"></select>
                             <span class="input-group-text">桁</span>
                         </div>
                     </div>
                     <div class="col-sm-auto">
                         <label for="multiplication-length" class="text-light">口数</label>
                         <div class="input-group input-group-lg">
-                            <select id="multiplication-length" class="form-select"></select>
+                            <select id="multiplication-length" class="form-select text-end"></select>
                             <span class="input-group-text">口</span>
                         </div>
                     </div>
