fix: モバイル横画面での秒数表示（小数点）を修正

--- a/src/index.html
+++ b/src/index.html
@@ -181,8 +181,8 @@
                         <div class="input-group input-group-lg">
                             <select id="addition-time-int" class="form-select text-end" style="min-width: fit-content"></select>
                             <span class="input-group-text">.</span>
-                            <select id="addition-time-dec1" class="form-select text-end"></select>
-                            <select id="addition-time-dec2" class="form-select text-end"></select>
+                            <select id="addition-time-dec1" class="form-select text-end" style="max-width: fit-content"></select>
+                            <select id="addition-time-dec2" class="form-select text-end" style="max-width: fit-content"></select>
                             <span class="input-group-text">秒</span>
                         </div>
                         <input type="number" inputmode="numeric" id="addition-time" class="d-none" autocomplete="off">
