--- a/src/index.html
+++ b/src/index.html
@@ -245,10 +245,9 @@
                 <div>
                     <h5 class="mb-3">効果音</h5>
                     <div class="container">
-                        <div class="btn-group w-auto mb-2" role="group">
-                            <input type="checkbox" class="btn-check" id="is-muted-button" autocomplete="off">
-                            <label class="btn btn-outline-danger" for="is-muted-button" id="audio-status"></label>
-                            <input type="hidden" id="is-muted">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="is-muted">
+                            <label class="form-check-label" for="is-muted">音を消す</label>
                         </div>
                         <div class="input-group w-auto mb-2">
                             <label class="input-group-text" for="sound-extension">拡張子</label>
