fix: かけ算フラッシュの出題設定・秒数のインプットボックスの幅を修正

--- a/src/index.html
+++ b/src/index.html
@@ -218,8 +218,8 @@
                         <div class="input-group input-group-lg">
                             <select id="multiplication-time-int" class="form-select text-end" style="min-width: fit-content"></select>
                             <span class="input-group-text">.</span>
-                            <select id="multiplication-time-dec1" class="form-select text-end"></select>
-                            <select id="multiplication-time-dec2" class="form-select text-end"></select>
+                            <select id="multiplication-time-dec1" class="form-select text-end" style="max-width: fit-content"></select>
+                            <select id="multiplication-time-dec2" class="form-select text-end" style="max-width: fit-content"></select>
                             <span class="input-group-text">秒</span>
                         </div>
                         <input type="number" inputmode="numeric" id="multiplication-time" class="d-none" autocomplete="off">
