--- a/src/index.html
+++ b/src/index.html
@@ -227,12 +227,12 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-start">
-            <div class="form-check me-2">
-                <input class="form-check-input" type="checkbox" value="" id="fix-number-interval" disabled>
-                <label class="form-check-label text-light" for="fix-number-interval">表示間隔を固定する</label>
+        <div class="d-flex justify-content-start my-3">
+            <div class="form-check form-switch me-3">
+                <input class="form-check-input" type="checkbox" value="" id="fix-number-interval">
+                <label class="form-check-label text-light" for="fix-number-interval">表示間隔を固定したまま口数を変更する</label>
             </div>
-            <div class="form-check me-2">
+            <div class="form-check form-switch me-3">
                 <input class="form-check-input" type="checkbox" value="" id="hide-answer" disabled>
                 <label class="form-check-label text-light" for="hide-answer">答えを表示しない</label>
             </div>
