--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
                 <label class="form-check-label text-light" for="fix-number-interval">表示間隔を固定したまま口数を変更する</label>
             </div>
             <div class="form-check form-switch me-3">
-                <input class="form-check-input" type="checkbox" value="" id="hide-answer" disabled>
+                <input class="form-check-input" type="checkbox" value="" id="hide-answer">
                 <label class="form-check-label text-light" for="hide-answer">答えを表示しない</label>
             </div>
         </div>
