--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="form-check form-switch me-3">
                 <input class="form-check-input" type="checkbox" value="" id="hide-answer">
-                <label class="form-check-label text-light" for="hide-answer">答えを表示しない</label>
+                <label class="form-check-label text-light" for="hide-answer">答えを表示せず正誤判定のみ行う</label>
             </div>
         </div>
     </div>
