fix: プライバシーポリシーモーダルのフェードを無効にする

--- a/src/index.html
+++ b/src/index.html
@@ -724,7 +724,7 @@
     </div>
 </div>
 <!-- Privacy policy -->
-<div class="modal fade" id="privacyPolicyModal" tabindex="-1" role="dialog" aria-labelledby="privacyPolicyModalLabel" aria-hidden="true">
+<div class="modal" id="privacyPolicyModal" tabindex="-1" role="dialog" aria-labelledby="privacyPolicyModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-fullscreen-lg-down modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-header">
