--- a/src/index.html
+++ b/src/index.html
@@ -607,7 +607,7 @@
     <div class="modal-dialog modal-lg modal-fullscreen-lg-down modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="privacyPolicyModalTitle"><%- title %> <%- versionNumber %></span></h5>
+                <h5 class="modal-title" id="privacyPolicyModalTitle"><%- title %> <%- versionNumber %></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
