fix: アプリ内 readme のリンクを廃止

--- a/src/html/readme.html
+++ b/src/html/readme.html
@@ -1,6 +1,6 @@
 <h1>おーろら★ふらっしゅ</h1>
 <p>ブラウザ版はこちらの URL で遊べます。</p>
-<p><a href="https://aurora-flash.fairy-select.com/">https://aurora-flash.fairy-select.com/</a></p>
+<p>https://aurora-flash.fairy-select.com/</p>
 <p>作者自身の Web アプリ作成の勉強を兼ねて、フラッシュ暗算アプリ「おーろら★ふらっしゅ」を作成しました✨<br>
 桁数や口数、秒数を細かく設定可能です🙆<br>
 また、珠算式暗算などを基準に独自の難易度設定を 3 段階用意しています🥇🥈🥉<br>
@@ -8,7 +8,7 @@
 <hr>
 <h2>プライバシーポリシー</h2>
 <h3>個人情報について</h3>
-<p>「個人情報」とは、<a href="https://www.fairy-select.com/">Fairy Select</a>
+<p>「個人情報」とは、Fairy Select
 が本アプリを通じて収集した情報のうち、氏名やメールアドレス、電話番号等により個人が識別される可能性のある情報を言います。<br>
 本アプリは個人情報の取得を行っておりません。</p>
 <h3>本アプリの利用統計について</h3>
@@ -25,7 +25,7 @@
 <h3>制定日</h3>
 <p>制定: 2023 年 10 月 7 日</p>
 <h2>製作者情報</h2>
-<p><a href="https://www.fairy-select.com/">Fairy Select</a></p>
+<p>Fairy Select</p>
 <p>お問い合わせ窓口<br>
 noritaka.izumi{at}gmail.com<br>
 （<code>{at}</code> をアットマークに置き換えてご利用ください）</p>
