--- a/src/html/readme.html
+++ b/src/html/readme.html
@@ -1,7 +1,4 @@
-<h1>おーろら★ふらっしゅ</h1>
-<p>ブラウザ版はこちらの URL で遊べます。</p>
-<p>https://aurora-flash.fairy-select.com/</p>
-<p>作者自身の Web アプリ作成の勉強を兼ねて、フラッシュ暗算アプリ「おーろら★ふらっしゅ」を作成しました✨<br>
+<p>作者自身のフラッシュ暗算能力の向上を兼ねて、フラッシュ暗算アプリ「おーろら★ふらっしゅ」を作成しました✨<br>
 桁数や口数、秒数を細かく設定可能です🙆<br>
 また、珠算式暗算などを基準に独自の難易度設定を 3 段階用意しています🥇🥈🥉<br>
 日々の脳トレや練習にご活用ください🥰</p>
