update: モバイル用のアプリストアリンクを追加

--- a/src/index.html
+++ b/src/index.html
@@ -614,6 +614,7 @@
                 <%- readmeAsHtml %>
             </div>
             <div class="modal-footer">
+                <button id="open-app-page" type="button" class="btn btn-primary">評価する/更新を確認</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
             </div>
         </div>
