--- a/src/index.html
+++ b/src/index.html
@@ -227,6 +227,10 @@
                    for="fix-number-interval">表示間隔を固定したまま口数を変更する</label>
         </div>
         <div id="error-message" class="d-none d-flex justify-content-start my-3 text-warning"></div>
+        <div id="in-app-update-notification" class="d-none d-flex justify-content-start align-items-center my-3">
+            <span class="text-warning">アップデートの準備ができました。</span>
+            <button type="button" id="complete-flexible-update-button" class="btn btn-warning">インストールする</button>
+        </div>
     </div>
 </div>
 
