wip: update: フレキシブルアップデート進行中は進捗を表示する

--- a/src/index.html
+++ b/src/index.html
@@ -228,8 +228,8 @@
         </div>
         <div id="error-message" class="d-none d-flex justify-content-start my-3 text-warning"></div>
         <div id="in-app-update-notification" class="d-none d-flex justify-content-start align-items-center my-3">
-            <span class="text-warning">アップデートの準備ができました。</span>
-            <button type="button" id="complete-flexible-update-button" class="btn btn-warning">インストールする</button>
+            <span id="in-app-update-notification--message" class="text-warning"></span>
+            <button type="button" id="complete-flexible-update-button" class="d-none btn btn-warning">インストールする</button>
         </div>
     </div>
 </div>
